html changes to and add stock fixes

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,5 +40,11 @@
         </fieldset>
     </form>
 </div>
+<form action="/addStockItem" class="inline">
+    <button class="float-left submit-button" >Add Stock</button>
+</form>
+<form action="/people" class="inline">
+    <button class="float-left submit-button" >View Users</button>
+</form>
 </body>
 </html>
