--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -1,13 +1,18 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Products</title>
 </head>
 <body>
-<!--<tr th:each="message : ${peoples}">-->
-<!--    <td th:text="${message.id}">1</td>-->
-<!--    <td><a href="#" th:text="${message.title}">Title ...</a></td>-->
-<!--    <td th:text="${message.text}">Text ...</td>-->
-<!--</tr>-->
+<tr th:if="${stocks.empty}">
+    <td colspan="2"> No Stock Available </td>
+</tr>
+<ul th:each="stock : ${stocks}">
+    Name<li th:text="${stock.stockTitle}"></li>
+    Manufacture<li th:text="${stock.manufacturerName}"></li>
+    Price<li th:text="${stock.itemPrice}"></li>
+    Category<li th:text="${stock.itemCategory}"></li>
+    <br>
+</ul>
 </body>
 </html>
