changes to include admin login and find by name for items

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,11 +40,14 @@
         </fieldset>
     </form>
 </div>
-<form action="/addStockItem" class="inline">
-    <button class="float-left submit-button" >Add Stock</button>
+<form action="/testAdmin" class="inline">
+    <button class="float-left submit-button" >Admin Login</button>
 </form>
 <form action="/people" class="inline">
     <button class="float-left submit-button" >View Users</button>
+</form>
+<form action="/stock" class="inline">
+    <button class="float-left submit-button" >Stock</button>
 </form>
 </body>
 </html>
